--- a/Normal_DATN/src/main/resources/templates/nguoiDung/contactUs.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/contactUs.html
@@ -78,7 +78,7 @@
 						<li><i class="fa fa-fax"></i> Địa chỉ : 288 Nguyễn Văn
 							Linh,Phường Hưng Lợi,Quận Ninh Kiều,TP Cần Thơ</li>
 						<li><i class="fa fa-phone"></i> <a href="#">0817680523</a></li>
-						<li><i class="fa fa-envelope-o"></i>trungttpc01815@fpt.edu.vn</li>
+						<li><i class="fa fa-envelope-o"></i>holywatchct@gmail.com</li>
 					</ul>
 					<h3>
 						<strong>Giờ mở cửa</strong>
