--- a/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
@@ -105,12 +105,12 @@
                                                                <img src="assets\img\cart\span-new.png" alt="">
                                                            </div>
                                                          
-                                                                      < <div th:if="${HoLy.available} != true">
+                                                                      <div th:if="${HoLy.quantity} == 0">
 							 								<div class="product_action">
                                                                <a onclick="alert('Xin lỗi! Sản phẩm đã hết hàng.')" href="#"> <i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</a>
                                                            </div>
 																	</div>
-													                <div th:if="${HoLy.available} == true">
+													                <div th:if="${HoLy.quantity} != 0">
 																		 <div class="product_action">
                                               					          <a onclick="alert('Đã thêm vào giỏ hàng!')" th:href="@{|/addCartO/${HoLy.id}|}"> <i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng</a>
                                                            </div>
@@ -152,7 +152,9 @@
                                                     <div class="single_product">
                                                         <div class="product_thumb">
                                                            <a th:href="@{|/singleProduct/${HoLy.id}|}"><img th:src="@{|/imgProducts/${HoLy.image}.png|}" alt=""></a> 
-                                                   
+                                                           <div class="img_icone">
+                                                               <img src="assets\img\cart\span-new.png" alt="">
+                                                           </div>
                                                          
                                                                       <div th:if="${HoLy.available} != true">
 							                      <div class="product_action">
@@ -171,7 +173,7 @@
                                                       
                                                         </div>
                                                         <div class="product_content">
-                                                            <span class="product_price">₫[[${#numbers.formatDecimal(HoLy.price, 0, 'POINT', 0, 'NONE')}]]</span>
+                                                            <span class="product_price">d[[${#numbers.formatDecimal(HoLy.price, 0, 'POINT', 0, 'NONE')}]]</span>
                                                             <h3 class="product_title"><a  th:href="@{|/singleProduct/${HoLy.id}|}">[[${HoLy.name}]]</a></h3>
                                                         </div>
                                                         <div class="product_info">
