--- a/Normal_DATN/src/main/resources/templates/Admin/page/product.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/product.html
@@ -25,7 +25,7 @@
 								</div>
 								<div class="form-group">
 									<label for="exampleInputPassword1">Giá của sản phẩm</label> <input
-										type="number" class="form-control" id="priceProduct"
+										type="number" class="form-control" id="priceProduct" min="1000"
 										placeholder="Nhập giá của sản phẩm (tối thiểu 1.000 VNĐ)" pattern="[1-9]" onkeydown="javascript: return ['Backspace','Delete','ArrowLeft','ArrowRight'].includes(event.code) ? true : !isNaN(Number(event.key)) && event.code!=='Space'" />
 								</div>
 								<div class="form-group">
@@ -43,7 +43,7 @@
 								</div>
 								<div class="form-group">
 									<label for="exampleInputPassword1">Nhập số lượng sản
-										phẩm</label> <input type="number" class="form-control"
+										phẩm</label> <input type="number" class="form-control" min="1"
 										id="quanlityProduct" placeholder="Nhập số lượng sản phẩm (tối thiểu là 1)" onkeydown="javascript: return ['Backspace','Delete','ArrowLeft','ArrowRight'].includes(event.code) ? true : !isNaN(Number(event.key)) && event.code!=='Space'"/>
 								</div>
 
