--- a/Normal_DATN/src/main/resources/templates/Admin/page/orderDetail.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/orderDetail.html
@@ -74,12 +74,12 @@
 														style="height: 200px; width: 200px"
 														th:src="@{|/historyBuy/${HoLy.image}.png|}" alt=""></td>
 													<td class="sorting_1">[[${HoLy.name}]]</td>
-													<td class="sorting_1">[[${#numbers.formatDecimal(HoLy.price
-														*1, 0, 'POINT', 0, 'NONE')}]] ₫</td>
+													<td class="sorting_1">₫[[${#numbers.formatDecimal(HoLy.price
+														*1, 0, 'POINT', 0, 'NONE')}]]</td>
 													<td class="sorting_1">[[${#numbers.formatDecimal(HoLy.quanlity,
 														0, 'POINT', 0, 'NONE')}]]</td>
-													<td class="sorting_1">[[${#numbers.formatDecimal((HoLy.quanlity
-														* HoLy.price) * 1, 0, 'POINT', 0, 'NONE')}]] ₫</td>
+													<td class="sorting_1">₫[[${#numbers.formatDecimal((HoLy.quanlity
+														* HoLy.price) * 1, 0, 'POINT', 0, 'NONE')}]]</td>
 
 
 
