--- a/Normal_DATN/src/main/resources/templates/Admin/components/footer.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/components/footer.html
@@ -9,7 +9,7 @@
     <div class="pull-right hidden-xs">
       <b>Version</b> 2.4.18
     </div>
-    <strong>Copyright © 2014-2019 <a href="https://adminlte.io">AdminLTE</a>.</strong> All rights
+    <strong>Copyright ©2022 <a href="#">HoLy Watch</a>.</strong> All rights
     reserved.
   </footer>
 </body>
