--- a/Normal_DATN/src/main/resources/templates/layout/layout.html
+++ b/Normal_DATN/src/main/resources/templates/layout/layout.html
@@ -130,7 +130,7 @@
                                             </div>
                                                <div th:unless="${#request.remoteUser}">
                                                  <div class="shopping_cart">
-                                                <a href="/cart"><i class="fa fa-shopping-cart"></i> 0 Sản phẩm - 0 </a>
+                                                <a href="/cart"><i class="fa fa-shopping-cart"></i> 0 Sản phẩm - ₫0 </a>
                                             </div>
                                                </div>
 
@@ -482,7 +482,7 @@
                                         <p><i class="fa fa-map-marker" aria-hidden="true"></i>Số 288, Nguyễn Văn Linh, phường An Khánh, quận Ninh Kiều, Tp. Cần Thơ.</p>
 
                                         <p><i class="fa fa-mobile" aria-hidden="true"></i>(0292) 7300 468</p>
-                                        <a href="/ContactUs"><i class="fa fa-envelope-o" aria-hidden="true"></i> trungttpc01815@fpt.edu.vn </a>
+                                        <a href="/ContactUs"><i class="fa fa-envelope-o" aria-hidden="true"></i>holywatchct@gmail.com</a>
                                     </div>
                                 </div>
                             </div>
