--- a/Normal_DATN/src/main/resources/templates/nguoiDung/contactUs.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/contactUs.html
@@ -77,7 +77,7 @@
 					<ul>
 						<li><i class="fa fa-fax"></i> Địa chỉ : 288 Nguyễn Văn
 							Linh,Phường Hưng Lợi,Quận Ninh Kiều,TP Cần Thơ</li>
-						<li><i class="fa fa-phone"></i> <a href="#">0817680523</a></li>
+						<li><i class="fa fa-phone"></i> <a href="#">(0292) 7300 468</a></li>
 						<li><i class="fa fa-envelope-o"></i>holywatchct@gmail.com</li>
 					</ul>
 					<h3>
