--- a/Normal_DATN/src/main/resources/templates/nguoiDung/orderHistoryDetail.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/orderHistoryDetail.html
@@ -79,6 +79,57 @@
                          </div>
                          
                          <!--shopping cart area end -->
+                                <!--    <div class="coupon_area">
+                                        <div class="row">
+                                            <div class="col-lg-6 col-md-6">
+                                         <!--         <div class="coupon_code">
+                                                    <h3>Coupon</h3>
+                                                    <div class="coupon_inner">   
+                                                        <p>Enter your coupon code if you have one.</p>                                
+                                                        <input placeholder="Coupon code" type="text">
+                                                        <button type="submit">Apply coupon</button>
+                                                    </div>    
+                                                </div> 
+                                            </div>
+                                            <div class="col-lg-6 col-md-6">
+                                                <div class="coupon_code">
+                                                    <h3>Cart Totals</h3>
+                                                    <div class="coupon_inner">
+                                                       <div class="cart_subtotal">
+                                                           <p>Tổng giỏ hàng</p>
+                                                          
+                                                           <p class="cart_amount"> ₫[[${#numbers.formatDecimal(tongTien, 0, 'POINT', 0, 'NONE')}]]</p>
+                                                       </div>
+                                                       <div class="cart_subtotal ">
+                                                           <p>Phí vận chuyển</p>
+                                                           <p class="cart_amount">₫ 30.000</p>
+                                                       </div>
+                                     
+
+                                                       <div class="cart_subtotal">
+                                                           <p>Thành tiền</p>
+                                                            
+                                                           <p class="cart_amount">₫[[${#numbers.formatDecimal(tongTien+30000, 0, 'POINT', 0, 'NONE')}]]</p>
+                                                       </div>
+                                                      
+                                                                     <div th:if="${tongTien} != 0">
+                                                                <div class="checkout_btn">
+												                           <a th:href="@{/checkout}">Tiến hành đặt hàng</a>
+												                            </div>
+													                </div>
+													                <div th:if="${tongTien} == 0">
+													                 
+												                                 <div class="checkout_btn">
+												             <a  onclick="alert('Vui lòng thêm sản phẩm cần mua vào giỏ hàng!')" href="#">Tiến hành đặt hàng</a>
+												               </div>
+           																		     </div> 
+                                                     
+                                                      
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>-->
 
 </body>
 </html>
