--- a/Normal_DATN/src/main/resources/templates/nguoiDung/checkout.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/checkout.html
@@ -96,7 +96,7 @@
                                                     
                                                           <div th:if="${tongTien} != null">
 								<div class="order_button">
-									<button type="submit">Tiến hành đặt hành</button>
+									<button type="submit">Tiến hành đặt hàng</button>
 								</div>
 							</div>
 													                <div th:if="${tongTien} == null">
