sửa tk theo đã giao

--- a/Normal_DATN/src/main/resources/templates/Admin/page/ReportRevenueByCategories.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/ReportRevenueByCategories.html
@@ -37,22 +37,22 @@
 													<th class="sorting_asc" tabindex="0"
 														aria-controls="example2" rowspan="1" colspan="1"
 														aria-sort="ascending"
-														aria-label="Rendering engine: activate to sort column descending">Người dùng</th>
+														aria-label="Rendering engine: activate to sort column descending">Danh mục</th>
 													<th class="sorting" tabindex="0" aria-controls="example2"
 														rowspan="1" colspan="1"
-														aria-label="Browser: activate to sort column ascending">Số lượng sản phẩm đã mua</th>
+														aria-label="Browser: activate to sort column ascending">Số lượng sản phẩm đã bán</th>
 													<th class="sorting" tabindex="0" aria-controls="example2"
 														rowspan="1" colspan="1"
 														aria-label="Browser: activate to sort column ascending">Tổng giá tiền</th>
 													<th class="sorting" tabindex="0" aria-controls="example2"
 														rowspan="1" colspan="1"
-														aria-label="Browser: activate to sort column ascending">Giá sản phẩm mua thấp nhất</th>
+														aria-label="Browser: activate to sort column ascending">Giá sản phẩm bán thấp nhất</th>
 														<th class="sorting" tabindex="0" aria-controls="example2"
 														rowspan="1" colspan="1"
-														aria-label="Browser: activate to sort column ascending">Giá sản phẩm mua cao nhất</th>
+														aria-label="Browser: activate to sort column ascending">Giá sản phẩm bán cao nhất</th>
 														<th class="sorting" tabindex="0" aria-controls="example2"
 														rowspan="1" colspan="1"
-														aria-label="Browser: activate to sort column ascending">Giá trung bình mua</th>
+														aria-label="Browser: activate to sort column ascending">Giá trung bình bán</th>
 
 												</tr>
 											</thead>
