--- a/Normal_DATN/src/main/resources/templates/Admin/page/ReportRevenueByProduct.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/ReportRevenueByProduct.html
@@ -43,7 +43,7 @@
 														aria-label="Browser: activate to sort column ascending">Đã mua</th>
 													<th class="sorting" tabindex="0" aria-controls="example2"
 														rowspan="1" colspan="1"
-														aria-label="Browser: activate to sort column ascending">Tổng hóa đơn đã tạo</th>
+														aria-label="Browser: activate to sort column ascending">Tổng hóa đơn đã giao</th>
 													<th class="sorting" tabindex="0" aria-controls="example2"
 														rowspan="1" colspan="1"
 														aria-label="Browser: activate to sort column ascending">Doanh thu ròng</th>
