--- a/Normal_DATN/src/main/resources/templates/nguoiDung/Refundthanhcong.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/Refundthanhcong.html
@@ -108,7 +108,12 @@
 								Chúng tôi sẽ gửi chi tiết giao dịch này về email của bạn. Bạn nên giữ email này để làm tham khảo trong tương lai. Thời gian hoàn tiền T+3 (sau 3 ngày)
 							
 							</p>
-							
+							<form action="/">
+							<button formaction="index" style="float: right;display:flex;position:relative;
+							  background: #b10d0d;right:0;
+							  padding: 10px;color:white;text-transform:uppercase;font-weight:bold;
+							  border:none;box-shadow: #eac1c1 3px 5px 20px 1px">Tiếp tục mua sắm</button>
+							  </form>
 						</td>
 						<td width="36"
 							style="color: #464646; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 16px; vertical-align: top;"></td>
