--- a/Normal_DATN/src/main/resources/templates/nguoiDung/bangtienmat.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/bangtienmat.html
@@ -67,7 +67,7 @@
 							style="color: #F16522; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 16px; vertical-align: top;">
 							<h1
 								style="color: #F16522; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 30px; font-weight: 700; line-height: 34px; margin-bottom: 0; margin-top: 0;">
-								Giao dịch thành công</h1>
+								Đặt hàng thành công</h1>
 						</td>
 						<td width="36"
 							style="color: #464646; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 16px; vertical-align: top;"></td>
@@ -97,15 +97,10 @@
 							style="color: #464646; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 16px; vertical-align: top;">
 							<p
 								style="color: #464646; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 22px; margin: 0;">Bạn đã giao dịch thành công</p> <br>
+				
 							<p
 								style="color: #464646; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 22px; margin: 0;">
-								<strong>Chi tiết giao dịch:</strong><br /> Tổng số tiền:
-								[[${#numbers.formatDecimal(total/100, 0, 'POINT', 0, 'NONE')}]]₫  <br /> Tài khoản:
-								[[${account}]]<br />
-							</p> <br>
-							<p
-								style="color: #464646; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 22px; margin: 0;">
-								Chúng tôi sẽ gửi chi tiết giao dịch này về email của bạn. Bạn nên giữ email này để làm tham khảo trong tương lai
+								Chúng tôi đã nhận được thông tin đơn hàng. HoLy Watch sẽ đóng gói và giao hàng cho Quý khách trong thời gian nhanh nhất.
 							
 							</p>
 							<form action="/">
@@ -137,10 +132,10 @@
 							style="color: #464646; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 16px; vertical-align: top;">
 							<p
 								style="color: #464646; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 22px; margin: 0;">
-								<strong>Số giao dịch: [[${TranNo}]]</strong>
+								<strong>Chân thành cảm ơn Quý khách đã đặt hàng!</strong>
 							</p>
 							<p
-								style="color: #464646; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 22px; margin: 0;">Ngày giao dịch: [[${#temporals.format(dateTran, 'dd/MM/yyyy')}]]</p>
+								style="color: #464646; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 22px; margin: 0;">HoLy Watch</p>
 							<p
 								style="color: #464646; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 22px; margin: 0;"></p>
 						</td>
