--- a/Normal_DATN/src/main/resources/templates/Admin/page/user.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/user.html
@@ -150,7 +150,7 @@
                   <td class="sorting_1">[[${Users.phone}]]</td>
                   <td class="sorting_1">[[${Users.email}]]</td>
                   <div th:if="${Users.activated}==true">
-                        <td class="sorting_1">active</td>
+                        <td class="sorting_1">Active</td>
                        
                   </div>
                   <div th:unless="${Users.activated}==true">
